--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,30 @@
     transform: translate(-50%, 0);
 }
 
+.large-button {
+    box-sizing: content-box;
+    width: 108px;
+    height: 34px;
+    padding: 0px 16px 0px 16px;
+    margin: 12px 0px 0px 0px;
+    border: none;
+    background: rgb(248, 249, 250);
+    font-size: 14px;
+    color: rgb(60, 64, 67);
+}
+
+.large-button:hover {
+    box-shadow: 0px 1px 3px darkgrey;
+}
+
+.large-button#search-button {
+    margin-right: 8px;
+}
+
+.large-button#lucky-button {
+    margin-left: 8px;
+}
+
 .centered-vertically {
     position: relative;
     top: 50%;
@@ -50,8 +74,21 @@
     margin-top: 10px;
 }
 
+#search-icon {
+    height: 50%;
+    left: 15px;
+    position: absolute;
+}
+
+#mic-icon {
+    height: 50%;
+    position: absolute;
+    right: 15px;
+}
+
 form {
     width: 582px;
+    margin: 20px 0px 0px 0px;
 }
 
 input:focus {
@@ -64,6 +101,6 @@ form.centered-horizontally {
 
 input#search-term {
     border: none;
-    width: 90%;
+    width: 80%;
     height: 80%;
 }
