--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,37 @@
+nav.navigation {
+    margin: 0px 0px 16px 0px;
+    display:flex;
+    flex-direction: row-reverse;
+    align-items: center;
+}
+
+nav.navigation > * {
+    margin: 18px 12px 18px 12px;
+}
+
+nav.navigation > a {
+    font-family: arial, sans-serif;
+    font-size: 13px;
+    color: black;
+    text-decoration: none;
+}
+
+nav.navigation > a:hover {
+    text-decoration: underline;
+}
+
+nav.navigation > img:hover {
+    cursor: pointer;
+}
+
+
+
 .centered-horizontally {
-    position: relative;
-    left: 50%;
-    transform: translate(-50%, 0);
+    margin: auto;
+}
+
+.flex-container {
+    display: flex;
 }
 
 .large-button {
@@ -28,6 +58,10 @@
     margin-left: 8px;
 }
 
+.nav-link {
+    position: relative;
+    top:0%;
+}
 .centered-vertically {
     position: relative;
     top: 50%;
@@ -72,6 +106,9 @@
 #search-button-container {
     display: inline-block;
     margin-top: 10px;
+    position: relative;
+    left: 50%;
+    transform: translate(-50%, 0px);
 }
 
 #search-icon {
@@ -86,6 +123,15 @@
     right: 15px;
 }
 
+#dropdown-container {
+    display: inline-block;
+}
+
+img#logo-image {
+    display:block;
+    margin-bottom: 20px;
+}
+
 form {
     width: 582px;
     margin: 20px 0px 0px 0px;
@@ -96,11 +142,15 @@ input:focus {
 }
 
 form.centered-horizontally {
-    display: inline-block;
+    display: block;
 }
 
 input#search-term {
     border: none;
     width: 80%;
     height: 80%;
+}
+
+div.fill-container-width.position-relative {
+    margin: 0px 10px 0px 10px;
 }
