--- a/styles.css
+++ b/styles.css
@@ -1,30 +1,32 @@
+:root {
+    --footer-top-bottom-padding: 8px;
+}
+
+body,
+html {
+    height: 100%;
+}
+
 nav.navigation {
     margin: 0px 0px 16px 0px;
-    display:flex;
+    display: flex;
     flex-direction: row-reverse;
     align-items: center;
 }
 
-nav.navigation > * {
+nav.navigation>* {
     margin: 18px 12px 18px 12px;
 }
 
-nav.navigation > a {
+nav.navigation>a {
     font-family: arial, sans-serif;
     font-size: 13px;
     color: black;
-    text-decoration: none;
 }
 
-nav.navigation > a:hover {
-    text-decoration: underline;
-}
-
-nav.navigation > img:hover {
+nav.navigation>img:hover {
     cursor: pointer;
 }
-
-
 
 .centered-horizontally {
     margin: auto;
@@ -60,8 +62,9 @@ nav.navigation > img:hover {
 
 .nav-link {
     position: relative;
-    top:0%;
+    top: 0%;
 }
+
 .centered-vertically {
     position: relative;
     top: 50%;
@@ -76,7 +79,7 @@ nav.navigation > img:hover {
 }
 
 .fill-container-width {
-    width:100%;
+    width: 100%;
 }
 
 .position-relative {
@@ -93,6 +96,7 @@ nav.navigation > img:hover {
 .border-radius:hover {
     box-shadow: 0 0 6px darkgrey;
 }
+
 .position-right {
     position: relative;
     right: 0px;
@@ -128,7 +132,7 @@ nav.navigation > img:hover {
 }
 
 img#logo-image {
-    display:block;
+    display: block;
     margin-bottom: 20px;
 }
 
@@ -151,6 +155,70 @@ input#search-term {
     height: 80%;
 }
 
-div.fill-container-width.position-relative {
-    margin: 0px 10px 0px 10px;
+div#top-level-container {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+.flex-grow {
+    flex-grow: 1;
+}
+
+.flex-shrink {
+    flex-shrink: 0;
+}
+
+footer {
+    background-color: rgb(242, 242, 242);
+    height: 90px;
+    padding: 0px 30px 0px 30px;
+    font-family: arial, sans-serif;
+    font-size: 14px;
+    color: #70757a;
+}
+
+footer>nav {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    height: 50%;
+    margin: 0px -24px;
+}
+
+.solid {
+    margin: 0 -30px;
+}
+
+div#search-bar-container {
+    margin: 0px 12px 0px 12px;
+}
+
+footer a {
+    margin: 0px 24px;
+}
+
+a {
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
+a:visited {
+    color: inherit;
+}
+
+footer>div {
+    height: 50%;
+    display: flex;
+    align-items: center;
+}
+
+@media only screen and (max-width: 1200px) {
+    footer>nav {
+        justify-content: space-evenly;
+    }
 }
